syntax = "proto3";

package attachment;

import "google/protobuf/any.proto";

message Attachment {
    uint32 version = 1;
    google.protobuf.Any data = 2;
}

message MultiOutCreation {
    message Recipients {
        uint64 id = 1;
        uint64 amount = 2;
    }
    repeated Recipients recipients = 1;
}

message MultiSameOutCreation {
    repeated uint64 recipients = 1;
}

message ArbitaryMessage {
    bool isText = 1;
    string content = 2;
}

message AliasAssignment {
    string alias = 1;
    string uri = 2;
}

message AccountInfo {
    string name = 1;
    string description = 2;
}

message AliasSell {
    string alias = 1;
    int64 price = 2;
}

message AliasBuy {
    string alias = 1;
}

message AssetIssuance {
    string name = 1;
    string description = 2;
    uint64 quantity = 3;
    uint32 decimals = 4;
    string comment = 5;
}

message AssetTransfer {
    uint64 quantity = 1;
    string comment = 2;
}

message AskOrderPlacement {
    uint64 asset = 1;
    uint64 quantity = 2;
    uint64 price = 3;
    string comment = 4;
}

message BidOrderPlacement {
    uint64 asset = 1;
    uint64 quantity = 2;
    uint64 price = 3;
}

message AskOrderCancellation {
    uint64 order = 1;
}

message BidOrderCancellation {
    uint64 order = 1;
}

message DigitalGoodsListing {
    string name = 1;
    string description = 2;
    string tags = 3; // repeated ?
    uint32 quantity = 4;
    uint64 price = 5;
}

message DigitalGoodsDelisting {
    string goods = 1;
}

message DigitalGoodsPriceChange {
    uint64 goods = 1;
    uint64 price = 2;
}

message DigitalGoodsQuantityChange {
    uint64 goods = 1;
    int32 deltaQuantity = 2;
}

message DigitalGoodsPurchase {
    uint64 goods = 1;
    uint32 quantity = 2;
    uint64 price = 3;
    uint32 deliveryDeadlineTimestamp = 4;
}

message DigitalGoodsDelivery {
    uint64 purchase = 1;
    bool goodsIsText = 2;
    bytes goodsData = 3;
    bytes goodsNonce = 4;
    uint64 discount = 5;
}

message DigitalGoodsFeedback {
    uint64 purchase = 1;
}

message DigitalGoodsRefund {
    uint64 purchase = 1;
    uint64 refundPrice = 2;
}

message EffectiveBalanceLeasing {
    uint32 period = 1;
}

message RewardRecipientAssignment {
}

message EscrowCreation {
    enum DeadlineAction {
        UNDECIDED = 0;
        RELEASE = 1;
        REFUND = 2;
        SPLIT = 3;
    }
    uint64 amount = 1;
    DeadlineAction deadlineAction = 2;
    int32 requiredSigners = 3;
    repeated uint64 signers = 4;
}

message EscrowSign {
    uint64 escrowID = 1;
    uint32 decision = 2; // enum ?
}

message EscrowResult {
    uint64 escrowID = 1;
    uint32 decision = 2; // enum ?
}

message SubscriptionSubscribe {
    uint32 frequency = 1;
}

message SubscriptionCancel {
    uint64 subscriptionID = 1;
}

message SubscriptionPayment {
    repeated uint64 subscriptionID = 1;
}

message AutomatedTransactionsCreation {
    string name = 1;
    string description = 2;
    bytes creationBytes = 3;
}

message EncryptedMessage {
    bool isText = 1;
    bytes data = 2;
    bytes nonce = 3;
}

message EncryptedToSelfMessage {
    bool isText = 1;
    bytes data = 2;
    bytes nonce = 3;
}

message PublicKeyAnnouncement {
    bytes publicKey = 1;
}
