syntax = "proto3";

//option go_package = "github.com/PoC-Consortium/Aspera/pkg/api/p2p/attachment";

package p2p;

message TransactionHeader {
    uint64 id = 1;
    uint32 version = 2;
    uint32 timestamp = 3;
    uint32 deadline = 4;
    bytes senderPublicKey = 5;
    uint64 recipient = 6;
    uint64 amount = 7;
    uint64 fee = 8;
    bytes referencedTransactionFullHash = 9;
    bytes signature = 10;
    uint32 ecBlockHeight = 11;
    uint64 ecBlockId = 12;
}

message Appendix {
    message Message {
        bool isText = 1;
        bytes content = 2;
    }
    message EncryptedMessage {
        bool isText = 1;
        bytes data = 2;
        bytes nonce = 3;
    }
    message PublicKeyAnnouncement {
        bytes publicKey = 1;
    }
    Message message = 1;
    EncryptedMessage encryptedMessage = 2;
    EncryptedMessage encryptToSelfMessage = 3;
    PublicKeyAnnouncement publicKeyAnnouncement = 4;
}

message MultiOutCreation {    
    message Attachment {
        message Recipients {
            uint64 id = 1;
            uint64 amount = 2;
        }
        repeated Recipients recipients = 2;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message MultiSameOutCreation {
    message Attachment { 
        repeated uint64 recipients = 1;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message ArbitaryMessage {
    TransactionHeader header = 1;
    Appendix appendix = 2;
}

message AliasAssignment {
    message Attachment { 
        bytes alias = 1;
        bytes uri = 2;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message AccountInfo {
    message Attachment { 
        bytes name = 1;
        bytes description = 2;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message AliasSell {
    message Attachment { 
        bytes name = 1;
        int64 price = 2;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message AliasBuy {
    message Attachment {
        bytes name = 1;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message AssetIssuance {
    message Attachment {
        bytes name = 1;
        bytes description = 2;
        uint64 quantity = 3;
        uint32 decimals = 4;
        bytes comment = 5;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message AssetTransfer {
    message Attachment {
        uint64 asset = 1;
        uint64 quantity = 2;
        bytes comment = 3;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message AskOrderPlacement {
    message Attachment {
        uint64 asset = 1;
        uint64 quantity = 2;
        uint64 price = 3;
        bytes comment = 4;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message BidOrderPlacement {
    message Attachment {
        uint64 asset = 1;
        uint64 quantity = 2;
        uint64 price = 3;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message AskOrderCancellation {
    message Attachment {
        uint64 order = 1;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message BidOrderCancellation {
    message Attachment {
        uint64 order = 1;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message DigitalGoodsListing {
    message Attachment {
        bytes name = 1;
        bytes description = 2;
        bytes tags = 3; // ToDo: repeated ?
        uint32 quantity = 4;
        uint64 price = 5;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message DigitalGoodsDelisting {
    message Attachment {
        uint64 id = 1;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message DigitalGoodsPriceChange {
    message Attachment {
        uint64 id = 1;
        uint64 price = 2;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message DigitalGoodsQuantityChange {
    message Attachment {
        uint64 id = 1;
        int32 delta = 2;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message DigitalGoodsPurchase {
    message Attachment {
        uint64 id = 1;
        uint32 quantity = 2;
        uint64 price = 3;
        uint32 deliveryDeadlineTimestamp = 4;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message DigitalGoodsDelivery {
    message Attachment {
        uint64 purchase = 1;
        bool isText = 2;
        bytes data = 3;
        bytes nonce = 4;
        uint64 discount = 5;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message DigitalGoodsFeedback {
    message Attachment {
        uint64 purchase = 1;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message DigitalGoodsRefund {
    message Attachment {
        uint64 purchase = 1;
        uint64 refund = 2;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message EffectiveBalanceLeasing {
    message Attachment {
        uint32 period = 1;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message RewardRecipientAssignment {
    TransactionHeader header = 1;
    Appendix appendix = 2;
}

enum DeadlineAction {
    undecided = 0;
    release = 1;
    refund = 2;
    split = 3;
}

message EscrowCreation {
    message Attachment {
        uint64 amount = 1;
        uint32 deadline = 2;
        DeadlineAction deadlineAction = 3;
        int32 requiredSigners = 4;
        repeated uint64 signers = 5;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message EscrowSign {
    message Attachment {
        uint64 id = 1;
        DeadlineAction decision = 2;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message EscrowResult {
    message Attachment {
        uint64 id = 1;
        DeadlineAction decision = 2;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message SubscriptionSubscribe {
    message Attachment {
        uint32 frequency = 1;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message SubscriptionCancel {
    message Attachment {
        uint64 id = 1;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message SubscriptionPayment {
    message Attachment {
        repeated uint64 ids = 1;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message AutomatedTransactionsCreation {
    message Attachment {
        bytes name = 1;
        bytes description = 2;
        bytes bytes = 3;
    }
    TransactionHeader header = 1;
    Attachment attachment = 2;
    Appendix appendix = 3;
}

message AutomatedTransactionsPayment {
    TransactionHeader header = 1;
    Appendix appendix = 2;
}

message OrdinaryPayment {
    TransactionHeader header = 1;
    Appendix appendix = 2;
}
